<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_activity_home"
        />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/grafico_icon"
        android:title="@string/title_dashboard"
        />

    <item
        android:id="@+id/add_menuItem"
        android:icon="@drawable/add_icon"
        android:title="@string/title_add"
        />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/user_menuItem"
        android:icon="@drawable/usuario_icon"
        android:title="@string/title_user" />

</menu>